Reduce the font size to fix the overflow(scroll) issue

--- a/app/stylesheets/_reset.css
+++ b/app/stylesheets/_reset.css
@@ -29,7 +29,7 @@ body {
 body {
   display: none;
   font-family: 'Barlow', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.4;
   margin: 0 auto;
   opacity: 0;
